--- a/TestExcel/Views/TimeSchedule/TeSchedule.cshtml
+++ b/TestExcel/Views/TimeSchedule/TeSchedule.cshtml
@@ -12,7 +12,8 @@
     string ErrorMessage = ViewBag.ErrorMessage;
 }
 <script>
-        $(document).ready(function () {
+    $(document).ready(function () {
+        var num = "";
             $("#ddl_Semester").val(@SEMESTER);
             $("#ddl_Year").val(@YEAR);
             $("#SUBJECT_NAME").val($("#SUBJECT").val());
@@ -39,7 +40,7 @@
                     $("#ErrorAlert").hide("fade");
                 }, 3000);
             }
-            var num = @number;
+            num = ""+ @number +"";
             if (num != "") {
                 $("#TableLocation2 tr td div input[value='" + num + "']").parent().css('background-color', '#ff0000');
                 $("#TableLocation2 tr td div input[value='" + num + "']").parent().css('color', 'white');
@@ -66,10 +67,10 @@
         <tbody>
             <tr>
                 <td align="right"><b>ปีการศึกษา&nbsp;</b></td>
-                <td colspan="5" style="padding-right:1em">@Html.DropDownList("ddl_Year", (SelectList)ViewBag.ddl_Year, new { @class = "form-control", style = "" })</td>
+                <td colspan="5" style="padding-right:1em">@Html.DropDownList("ddl_Year", (SelectList)ViewBag.ddl_Year, new { @class = "form-control", style = "width:80px" })</td>
                 <td align="right"><b>ภาคการศึกษา&nbsp;</b></td>
                 <td colspan="5" style="padding-right:1em">
-                    <select class="form-control" id="ddl_Semester" name="ddl_Semester">
+                    <select class="form-control" id="ddl_Semester" name="ddl_Semester" style="width:70px">
                         <option value="1">1</option>
                         <option value="2">2</option>
                         <option value="3">3</option>
@@ -77,7 +78,7 @@
                 </td>
                 <td align="right"><b>รหัสวิชา&nbsp;</b></td>
                 <td colspan="5" style="padding-right:1em">
-                    @Html.DropDownList("SUBJECT", (SelectList)ViewBag.ddl_Subject, new { @class = "form-control", style = "" })
+                    @Html.DropDownList("SUBJECT", (SelectList)ViewBag.ddl_Subject, new { @class = "form-control", style = "width:120px" })
                 </td>
                 <td align="right"><b>วิชา&nbsp;</b></td>
                 <td colspan="5" style="padding-right:1em">
@@ -95,7 +96,7 @@
     @Html.Hidden("Semester", SEMESTER)
     @Html.Hidden("Year", YEAR)
     <div class="w3-row">
-        <div class="col-lg-6 w3-container w3-card space" style="background-color:#25b0ee">
+        <div class="col-lg-6 w3-container w3-card space" style="padding-bottom:5px;background-color:#25b0ee">
             <table border="0" align="center" style="border-collapse:separate;border-spacing:5px">
                 <thead>
                     <tr>
@@ -138,7 +139,6 @@
                                 <option value="18">18:00</option>
                                 <option value="19">19:00</option>
                                 <option value="20">20:00</option>
-                                <option value="21">21:00</option>
                             </select>
                         </td>
                         <td align="center"><b>-&nbsp;</b></td>
@@ -162,8 +162,12 @@
                     </tr>
                     <tr>
                         <td align="right"><b>ห้องเรียน&nbsp;</b></td>
-                        <td colspan="13">
+                        <td colspan="5">
                             @Html.TextBox("FIRST_SAVE_CLASSROOM", "", new { @class = "form-control", @placeholder = "" })
+                        </td>
+                        <td align="right"><b>สาขาวิชา&nbsp;</b></td>
+                        <td colspan="7">
+                            @Html.TextBox("FIRST_SAVE_BRANCH", "", new { @class = "form-control", @placeholder = "", disabled = "disabled" })
                         </td>
                     </tr>
                 </tbody>
@@ -182,12 +186,12 @@
                     <tr>
                         <td align="right"><b>ตอนเรียน&nbsp;</b></td>
                         <td width="10%">
-                            @Html.Hidden("SECOND_SECTION_ID", "0")
+                            @Html.Hidden("SECOND_SECTION_ID", "")
                             @Html.TextBox("SECOND_SAVE_NUMBER", "", new { @class = "form-control", @placeholder = "" })
                         </td>
                         <td align="right"><b>&nbsp;</b></td>
-                        <td colspan="5">
-                            <select class="form-control" id="SECOND_SAVE_DATE" name="SECOND_SAVE_DATE">
+                        <td colspan="3" style="padding-right:2px">
+                            <select class="form-control" id="SECOND_SAVE_DATE" name="SECOND_SAVE_DATE" style="">
                                 <option value="M">วันจันทร์</option>
                                 <option value="T">วันอังคาร</option>
                                 <option value="W">วันพุธ</option>
@@ -197,7 +201,7 @@
                             </select>
                         </td>
                         <td align="right"><b>เวลา&nbsp;</b></td>
-                        <td colspan="2">
+                        <td colspan="3" style="padding-right:2px">
                             <select class="form-control" id="SECOND_SAVE_TIMESTART" name="SECOND_SAVE_TIMESTART" style="width:6em">
                                 <option value="8">08:00</option>
                                 <option value="9">09:00</option>
@@ -212,11 +216,10 @@
                                 <option value="18">18:00</option>
                                 <option value="19">19:00</option>
                                 <option value="20">20:00</option>
-                                <option value="21">21:00</option>
                             </select>
                         </td>
                         <td align="center"><b>-&nbsp;</b></td>
-                        <td colspan="2">
+                        <td colspan="3" style="padding-right:1em">
                             <select class="form-control" id="SECOND_SAVE_TIMEEND" name="SECOND_SAVE_TIMEEND" style="width:6em">
                                 <option value="9">09:00</option>
                                 <option value="10">10:00</option>
@@ -236,8 +239,12 @@
                     </tr>
                     <tr>
                         <td align="right"><b>ห้องเรียน&nbsp;</b></td>
-                        <td colspan="13">
+                        <td colspan="5">
                             @Html.TextBox("SECOND_SAVE_CLASSROOM", "", new { @class = "form-control", @placeholder = "" })
+                        </td>
+                        <td align="right"><b>สาขาวิชา&nbsp;</b></td>
+                        <td colspan="7">
+                            @Html.TextBox("SECOND_SAVE_BRANCH", "", new { @class = "form-control", @placeholder = "", disabled = "disabled" })
                         </td>
                     </tr>
                 </tbody>
@@ -295,15 +302,6 @@
                         var check1 = Model.Where(x => x.SECTION_TIME_START <= b && x.SECTION_TIME_END > b && x.SECTION_DATE == date[a]).OrderBy(x => x.SECTION_TIME_START).LastOrDefault();
                         if (check != null)
                         {
-                            var search_id = WhereTimeDate.First().SECTION_ID;
-                            var tsearchid = "id_" + search_id;
-                            var tsubjectid = "subjectid_" + search_id;
-                            var tname = "name_" + search_id;
-                            var tnumber = "number_" + search_id;
-                            var ttimestart = "timestart_" + search_id;
-                            var ttimeend = "timeend_" + search_id;
-                            var tdate = "date_" + search_id;
-                            var tclassroom = "classroom_" + search_id;
                             var trigger = Model.Where(x => x.SUBJECT_ID == check.SUBJECT_ID && x.SECTION_BRANCH_NAME == check.SECTION_BRANCH_NAME && x.SECTION_DATE == date[a]).Count();
                             if (trigger == 1)
                             {
@@ -314,22 +312,19 @@
                                 var TIME = (TIME_END - TIME_START) * 4;
                                 <td id="@tid" colspan="@TIME" class="droppable revert" width="60px">
                                     <div class="draggable getdata" style="background-color:@color;width:100%;height:50px">
-                                        <div id="x_button" class="btn btn-default pull-right x_button text-center">
-                                            X
-                                            @Html.Hidden("x_value", TIME + "_" + date[a])
-                                        </div>
                                         <p>
                                             @WhereTimeDate.First().SUBJECT_ID @WhereTimeDate.First().SUBJECT_NAME ตอน @WhereTimeDate.First().SECTION_NUMBER
                                         </p>
                                         @Html.Hidden("searchId", WhereTimeDate.First().SECTION_ID)
-                                        @Html.Hidden("First_" + tsearchid, WhereTimeDate.First().SECTION_ID)
-                                        @Html.Hidden("First_" + tsubjectid, WhereTimeDate.First().SUBJECT_ID)
-                                        @Html.Hidden("First_" + tname, WhereTimeDate.First().SUBJECT_NAME)
-                                        @Html.Hidden("First_" + tnumber, WhereTimeDate.First().SECTION_NUMBER)
-                                        @Html.Hidden("First_" + ttimestart, WhereTimeDate.First().SECTION_TIME_START)
-                                        @Html.Hidden("First_" + ttimeend, WhereTimeDate.First().SECTION_TIME_END)
-                                        @Html.Hidden("First_" + tdate, WhereTimeDate.First().SECTION_DATE)
-                                        @Html.Hidden("First_" + tclassroom, WhereTimeDate.First().SECTION_CLASSROOM)
+                                        @Html.Hidden("First_id_" + WhereTimeDate.First().SECTION_ID, WhereTimeDate.First().SECTION_ID)
+                                        @Html.Hidden("First_subjectid_" + WhereTimeDate.First().SECTION_ID, WhereTimeDate.First().SUBJECT_ID)
+                                        @Html.Hidden("First_name_" + WhereTimeDate.First().SECTION_ID, WhereTimeDate.First().SUBJECT_NAME)
+                                        @Html.Hidden("First_number_" + WhereTimeDate.First().SECTION_ID, WhereTimeDate.First().SECTION_NUMBER)
+                                        @Html.Hidden("First_timestart_" + WhereTimeDate.First().SECTION_ID, WhereTimeDate.First().SECTION_TIME_START)
+                                        @Html.Hidden("First_timeend_" + WhereTimeDate.First().SECTION_ID, WhereTimeDate.First().SECTION_TIME_END)
+                                        @Html.Hidden("First_date_" + WhereTimeDate.First().SECTION_ID, WhereTimeDate.First().SECTION_DATE)
+                                        @Html.Hidden("First_classroom_" + WhereTimeDate.First().SECTION_ID, WhereTimeDate.First().SECTION_CLASSROOM)
+                                        @Html.Hidden("First_branch_" + WhereTimeDate.First().SECTION_ID, WhereTimeDate.First().SECTION_BRANCH_NAME)
                                     </div>
                                 </td>
                             }
@@ -351,31 +346,29 @@
                                     var TIME = (tmp_last - tmp_first) * 4;
                                     <td id="@tid" colspan="@TIME" width="60px" class="droppable">
                                         <div class="draggable getdata" style="background-color:@color;height:50px">
-                                            <div id="x_button" class="btn btn-default pull-right x_button text-center">
-                                                X
-                                                @Html.Hidden("x_value", TIME + "_" + date[a])
-                                            </div>
                                             <p>
                                                 @first.SUBJECT_ID @first.SUBJECT_NAME ตอน @first.SECTION_NUMBER
                                             </p>
                                             @Html.Hidden("searchId", first.SECTION_ID)
-                                            @Html.Hidden("First_" + tsearchid, first.SECTION_ID)
-                                            @Html.Hidden("First_" + tsubjectid, first.SUBJECT_ID)
-                                            @Html.Hidden("First_" + tname, first.SUBJECT_NAME)
-                                            @Html.Hidden("First_" + tnumber, first.SECTION_NUMBER)
-                                            @Html.Hidden("First_" + ttimestart, first.SECTION_TIME_START)
-                                            @Html.Hidden("First_" + ttimeend, first.SECTION_TIME_END)
-                                            @Html.Hidden("First_" + tdate, first.SECTION_DATE)
-                                            @Html.Hidden("First_" + tclassroom, first.SECTION_CLASSROOM)
+                                            @Html.Hidden("First_id_" + first.SECTION_ID, first.SECTION_ID)
+                                            @Html.Hidden("First_subjectid_" + first.SECTION_ID, first.SUBJECT_ID)
+                                            @Html.Hidden("First_name_" + first.SECTION_ID, first.SUBJECT_NAME)
+                                            @Html.Hidden("First_number_" + first.SECTION_ID, first.SECTION_NUMBER)
+                                            @Html.Hidden("First_timestart_" + first.SECTION_ID, first.SECTION_TIME_START)
+                                            @Html.Hidden("First_timeend_" + first.SECTION_ID, first.SECTION_TIME_END)
+                                            @Html.Hidden("First_date_" + first.SECTION_ID, first.SECTION_DATE)
+                                            @Html.Hidden("First_classroom_" + first.SECTION_ID, first.SECTION_CLASSROOM)
+                                            @Html.Hidden("First_branch_" + first.SECTION_ID, first.SECTION_BRANCH_NAME)
 
-                                            @Html.Hidden("Second_" + tsearchid, second.SECTION_ID)
-                                            @Html.Hidden("Second_" + tsubjectid, second.SUBJECT_ID)
-                                            @Html.Hidden("Second_" + tname, second.SUBJECT_NAME)
-                                            @Html.Hidden("Second_" + tnumber, second.SECTION_NUMBER)
-                                            @Html.Hidden("Second_" + ttimestart, second.SECTION_TIME_START)
-                                            @Html.Hidden("Second_" + ttimeend, second.SECTION_TIME_END)
-                                            @Html.Hidden("Second_" + tdate, second.SECTION_DATE)
-                                            @Html.Hidden("Second_" + tclassroom, second.SECTION_CLASSROOM)
+                                            @Html.Hidden("Second_id_" + first.SECTION_ID, second.SECTION_ID)
+                                            @Html.Hidden("Second_subjectid_" + first.SECTION_ID, second.SUBJECT_ID)
+                                            @Html.Hidden("Second_name_" + first.SECTION_ID, second.SUBJECT_NAME)
+                                            @Html.Hidden("Second_number_" + first.SECTION_ID, second.SECTION_NUMBER)
+                                            @Html.Hidden("Second_timestart_" + first.SECTION_ID, second.SECTION_TIME_START)
+                                            @Html.Hidden("Second_timeend_" + first.SECTION_ID, second.SECTION_TIME_END)
+                                            @Html.Hidden("Second_date_" + first.SECTION_ID, second.SECTION_DATE)
+                                            @Html.Hidden("Second_classroom_" + first.SECTION_ID, second.SECTION_CLASSROOM)
+                                            @Html.Hidden("Second_branch_" + first.SECTION_ID, second.SECTION_BRANCH_NAME)
                                         </div>
                                     </td>
                                 }
@@ -388,22 +381,19 @@
                                     var TIME = (TIME_END - TIME_START) * 4;
                                     <td id="@tid" colspan="@TIME" width="60px" class="droppable">
                                         <div class="draggable getdata" style="background-color:@color;width:100%;height:50px">
-                                            <div id="x_button" class="btn btn-default pull-right x_button text-center">
-                                                X
-                                                @Html.Hidden("x_value", TIME + "_" + date[a])
-                                            </div>
                                             <p>
                                                 @WhereTimeDate.First().SUBJECT_ID @WhereTimeDate.First().SUBJECT_NAME ตอน @WhereTimeDate.First().SECTION_NUMBER
                                             </p>
                                             @Html.Hidden("searchId", WhereTimeDate.First().SECTION_ID)
-                                            @Html.Hidden("First_" + tsearchid, WhereTimeDate.First().SECTION_ID)
-                                            @Html.Hidden("First_" + tsubjectid, WhereTimeDate.First().SUBJECT_ID)
-                                            @Html.Hidden("First_" + tname, WhereTimeDate.First().SUBJECT_NAME)
-                                            @Html.Hidden("First_" + tnumber, WhereTimeDate.First().SECTION_NUMBER)
-                                            @Html.Hidden("First_" + ttimestart, WhereTimeDate.First().SECTION_TIME_START)
-                                            @Html.Hidden("First_" + ttimeend, WhereTimeDate.First().SECTION_TIME_END)
-                                            @Html.Hidden("First_" + tdate, WhereTimeDate.First().SECTION_DATE)
-                                            @Html.Hidden("First_" + tclassroom, WhereTimeDate.First().SECTION_CLASSROOM)
+                                            @Html.Hidden("First_id_" + WhereTimeDate.First().SECTION_ID, WhereTimeDate.First().SECTION_ID)
+                                            @Html.Hidden("First_subjectid_" + WhereTimeDate.First().SECTION_ID, WhereTimeDate.First().SUBJECT_ID)
+                                            @Html.Hidden("First_name_" + WhereTimeDate.First().SECTION_ID, WhereTimeDate.First().SUBJECT_NAME)
+                                            @Html.Hidden("First_number_" + WhereTimeDate.First().SECTION_ID, WhereTimeDate.First().SECTION_NUMBER)
+                                            @Html.Hidden("First_timestart_" + WhereTimeDate.First().SECTION_ID, WhereTimeDate.First().SECTION_TIME_START)
+                                            @Html.Hidden("First_timeend_" + WhereTimeDate.First().SECTION_ID, WhereTimeDate.First().SECTION_TIME_END)
+                                            @Html.Hidden("First_date_" + WhereTimeDate.First().SECTION_ID, WhereTimeDate.First().SECTION_DATE)
+                                            @Html.Hidden("First_classroom_" + WhereTimeDate.First().SECTION_ID, WhereTimeDate.First().SECTION_CLASSROOM)
+                                            @Html.Hidden("First_branch_" + WhereTimeDate.First().SECTION_ID, WhereTimeDate.First().SECTION_BRANCH_NAME)
                                         </div>
                                     </td>
                                 }
